--- a/css/queries.css
+++ b/css/queries.css
@@ -89,6 +89,13 @@
 
   .hero {
     padding: 0 0 19rem;
+    background-image: linear-gradient(
+      to bottom,
+      #2d2640 0%,
+      #2d2640 83.027522%,
+      #fff 83.027522%,
+      #fff 100%
+    );
   }
 
   .hero::before {
